[package]
name = "crypto"
version = "0.1.0"
authors = ["diamon <diamon213@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
ed25519-dalek = "1.0.0-pre.3"
rand = "0.7.3"

[lib]
name = "blockchainlib"
path = "src/lib.rs"

